@@ -21,3 +21,8 @@ samples/bonoboui/Bonobo_Sample_Hello.xml
 samples/bonoboui/hello.c
 samples/controls/Bonobo_Sample_Controls.server.in.in
 samples/controls/bonobo-sample-controls.c
+tools/browser/bonobo-browser.desktop.in
+tools/browser/bonobo-browser.xml
+tools/browser/component-details.c
+tools/browser/component-list.c
+tools/browser/window.c
