@@ -1,3 +1,7 @@
+2004-09-27  Rodrigo Moya <rodrigo@novell.com>
+
+	* POTFILES.in: added missing files from tools/browser/.
+
 2004-09-24  Adam Weinberger  <adamw@gnome.org>
 
 	* en_CA.po: Updated Canadian English translation.
